# learning-notes

./: .gitignore  README.md
cmake/: .gitignore  notes.md  outline.md  杂记.md
cmake/1_notes/: CMakeLists.txt  cmake_notes.md
cmake/3_c_test/: ctest.md
cmake/demo/: CMakeCache.txt  Makefile  cmake_install.cmake  file.dot
cmake/demo/2.1/: CMakeLists.txt
cpp/: notes.md  右值引用：移动语义与完美转发.md  模板总结.md
cpp/<functional>/: <functional>.md
cpp/Any/: any.h  any_test.cc  一个any类.md
cpp/code/1/: CMakeLists.txt  main.cc  new_op.cc  op.cc  op_registry.h
cpp/code/2/: CMakeLists.txt  fun.cc  main.cc  var.cc  var.h
cpp/template/: 非类型模板参数.md
cpp/thread_tutorial/: mutex锁.md  yeild函数.md
cpp/type_info/: type_info.md
cuda/: notes.md
cuda/code/1/: vector_add.cu
docker/: notes.md  杂记.md
git/: note.md  notes.md
leetcode/: notes.md
linux/: notes.md  杂记.md
mlir/: mlir_docs_summary.md
mlir/1_mlir_introduction/: 2_Dialects.md  3_A_glimpse_of_MLIR.md  4_MLIR_production_line.md  5_TableGen.md
mlir/2_mlir_toy_tutorial/: 1_MLIR_ODS_framework.md
mlir/mlir_introduction/: First_sight_on_MLIR.md
mlir/project/: .gitignore  CMakeLists.txt
mlir/project/IR/: CMakeLists.txt  infrt_ops.td
mlir/project/cmake/: llvm.cmake
paddle_inference/: demo.cc
protobuf/: note.md
protobuf/demo/: ADDRESS_BOOK_FILE  a.out  addressbook.pb.cc  addressbook.pb.h
python/: note.md
python/pybind11/: note.md
tensorRT/: notes.md  uml.plantuml
tensorRT/code/1/1.1/: custom_swish.h  custom_swish.cu
tensorRT/code/2.1/: LeakRelu_Plugin.cu  LeakRelu_Plugin.h  test.cc
tensorRT/code/2.3/: test.cc
tensorRT/code/2.4/: LeakRelu_Plugin.h
